--- a/static/styles/style.css
+++ b/static/styles/style.css
@@ -1,5 +1,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
 
+body {
+    height: 667px;
+}
+
 .container-main {
     display: flex;
     flex-flow: column nowrap;
